# romeaiapp

./: .biomeignore  .codefactor.yml  .dockerignore  .env.example  .env.test.example  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  CLAUDE.md  CONTINUE.md  GITHUB_SYNC_STATUS.md  PROJECT_STATUS_REPORT.md  README.md  SECURITY.md  WINDOWS.md  biome.json  bunfig.toml  docker-compose.yml  knip.json  lerna.json  package.json  tsconfig.build.template.json  tsconfig.dist-paths.json  tsconfig.json  turbo.json  vercel.json  vitest.config.ts
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  labeler.yml
.github/workflows/: CHANGELOG.md  README.md  ROADMAP.md  android-device-e2e.yml  android-release.yml  app-live-e2e.yml  app-real-e2e.yml  apple-store-release.yml  apps-deploy-e2e.yml  arm-apps-daemon.yml  arm-headscale-control-plane.yml  auto-label.yml  benchmark-tests.yml  benchmark-weekly.yml  build-agent-image.yml  build-android.yml  build-debian-package.yml  build-ios.yml  build-linux-iso.yml  build-llama-ffi-android.yml  build-llama-ffi-ios.yml  build-llama-ffi-linux.yml  build-llama-ffi-macos.yml  build-omnivoice.yml  build-vm-image.yml  cache-key-stability.yml  cerebras-nightly.yml  ci.yaml  claude-code-review.yml  claude-security-review.yml  claude.yml  cloud-cf-deploy.yml  cloud-deploy-backend.yml  cloud-e2e.yml  cloud-gateway-discord.yml  cloud-gateway-webhook.yml  cloud-tests.yml  codeql.yml  convert-omnivoice-singing.yml  coverage-gate.yml  (+88 more)
admin-dashboard-extracted/: auth.ts  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
admin-dashboard-extracted/app/: globals.css  layout.tsx  page.tsx
admin-dashboard-extracted/components/: client-providers.tsx  create-user-dialog.tsx  dashboard-chart.tsx  header.tsx  sidebar.tsx  user-transactions.tsx
admin-dashboard-extracted/hooks/: use-count-up.ts
admin-dashboard-extracted/lib/: auth-context.tsx
admin-dashboard-extracted/tests/: saas-core.test.ts
characters/: rome_agent.character.json
graphify-out/: .graphify_detect.json  .graphify_detect_err.txt  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  check_size.ps1  cost.json  detect_wrapper.py  extract_pdf.py  fast_detect.py  graph.html  graph.json  manifest.json  pdf_preview.py  run_detect.bat  run_detect2.py  run_pdf_graph.py  run_pdf_pipeline.py  step1_find_python.ps1  step2_detect.py
graphify-out/cache/: stat-index.json
graphify-pdf/graphify-out/: .graphify_chunk_01.json  .graphify_detect.json
graphify-pdf/input/: Rome_Travel_Agency_AI_Automation_Blueprint.md
patches/: @capacitor%2Fbarcode-scanner@3.0.2.patch  @farcaster%2Fquick-auth@0.0.6.patch  @orca-so%2Fcommon-sdk@0.7.0.patch  @solana%2Faccounts@5.5.1.patch  @solana%2Faddresses@5.5.1.patch  @solana%2Fassertions@5.5.1.patch  @solana%2Fcodecs-core@5.5.1.patch  @solana%2Fcodecs-data-structures@5.5.1.patch  @solana%2Fcodecs-numbers@5.5.1.patch  @solana%2Fcodecs-strings@5.5.1.patch  @solana%2Fcodecs@5.5.1.patch  @solana%2Ferrors@5.5.1.patch  @solana%2Ffast-stable-stringify@5.5.1.patch  @solana%2Ffunctional@5.5.1.patch  @solana%2Finstruction-plans@5.5.1.patch  @solana%2Finstructions@5.5.1.patch  @solana%2Fkeys@5.5.1.patch  @solana%2Fkit@5.5.1.patch  @solana%2Fnominal-types@5.5.1.patch  @solana%2Foffchain-messages@5.5.1.patch  @solana%2Foptions@5.5.1.patch  @solana%2Fplugin-core@5.5.1.patch  @solana%2Fprograms@5.5.1.patch  @solana%2Fpromises@5.5.1.patch  @solana%2Frpc-api@5.5.1.patch  @solana%2Frpc-parsed-types@5.5.1.patch  @solana%2Frpc-spec-types@5.5.1.patch  @solana%2Frpc-spec@5.5.1.patch  @solana%2Frpc-subscriptions-api@5.5.1.patch  @solana%2Frpc-subscriptions-channel-websocket@5.5.1.patch  @solana%2Frpc-subscriptions-spec@5.5.1.patch  @solana%2Frpc-subscriptions@5.5.1.patch  @solana%2Frpc-transformers@5.5.1.patch  @solana%2Frpc-transport-http@5.5.1.patch  @solana%2Frpc-types@5.5.1.patch  @solana%2Frpc@5.5.1.patch  @solana%2Fsigners@5.5.1.patch  @solana%2Fsubscribable@5.5.1.patch  @solana%2Fsysvars@5.5.1.patch  @solana%2Ftransaction-confirmation@5.5.1.patch  (+9 more)
plugins/: plugin-build-externals.ts  tsconfig.build.shared.json  tsup.plugin-packages.shared.ts
plugins/__tests__/: setup-routes-contract.test.ts  vitest.config.ts
plugins/app-model-tester/: CLAUDE.md  README.md  package.json  vite.config.views.ts  vitest.config.ts
plugins/plugin-agent-orchestrator/: AGENTS.md  CHANGELOG.md  LICENSE  README.md  build.ts  index.node.ts  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
plugins/plugin-agent-skills/: AGENTS.md  README.md  auto-enable.ts  biome.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
plugins/plugin-ainex/: AGENTS.md  README.md  (+5 more)
plugins/plugin-local-inference/native/whisper-eliza-adapter/: CMakeLists.txt  whisper_eliza_adapter.cpp  whisper_eliza_adapter.h
plugins/plugin-vision/native/doctr.cpp/: CMakeLists.txt  README.md
plugins/plugin-vision/native/doctr.cpp/include/: doctr.h
plugins/plugin-vision/native/doctr.cpp/scripts/: convert.py
plugins/plugin-vision/native/doctr.cpp/src/: doctr_det.cpp  doctr_rec.cpp
plugins/plugin-vision/native/yolo.cpp/: .gitignore  CMakeLists.txt  README.md  build.mjs
plugins/plugin-vision/native/yolo.cpp/include/: yolo.h
plugins/plugin-vision/native/yolo.cpp/scripts/: convert.py
plugins/plugin-vision/native/yolo.cpp/src/: yolo.cpp
plugins/plugin-vision/native/yolo.cpp/verify/: compare.py  make_ref.py  run_ggml.mjs  run_ts.mjs
scripts/: README.riscv64-smoke.md  build-riscv64-artifacts.sh  check-even-research-audit.mjs  check-riscv64-artifacts.sh  check-smartglasses-completion-gate.mjs  consolidate-packages.mjs  debug-failures.ts  debug-prompt-failures.ts  eval-prompts.ts  fix-pkg-shared-deps.mjs  generate-view-heroes.mjs  homescreen-eval.ts  nullish-operator-audit.mjs  personality-bench-bridge.d.mts  personality-bench-bridge.mjs  release-set-public-access.mjs  rm-path-recursive.mjs  spatial-convert-plugin-views.workflow.js  verify-riscv64-buildpaths.sh  verify-riscv64-end-to-end.sh  verify-smartglasses-software.mjs  views-eval.ts
(+6193 files in other folders)
